--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 * {
     margin: 0;
@@ -8,6 +10,7 @@
     list-style:  none;
     text-decoration: none;
 }
+
 
 :root {
     --color-bg: #1f1f38;
